# real-time-data-lake

./: .dockerignore  .env  .gitattributes  Dockerfile  README.md  consumers.sh  kill.sh  pyproject.toml  run.sh  test_kafka_consumers.sh  zk_kb.sh
airflow/: airflow.cfg  airflow.db
kafka_2.13-3.8.0/logs/: controller.log.2024-09-25-15  controller.log.2024-09-25-16  controller.log.2024-09-25-18  controller.log.2024-09-25-20  controller.log.2024-09-25-21  controller.log.2024-09-25-22  controller.log.2024-09-27-10  controller.log.2024-09-27-12  controller.log.2024-09-27-13  controller.log.2024-09-27-14  controller.log.2024-09-27-17  controller.log.2024-09-27-18  controller.log.2024-09-27-19  controller.log.2024-09-27-20  controller.log.2024-09-27-21  controller.log.2024-09-27-22  controller.log.2024-09-27-23  controller.log.2024-09-28-00  controller.log.2024-09-28-01  controller.log.2024-09-28-02  controller.log.2024-09-28-03  controller.log.2024-09-28-04  controller.log.2024-09-28-05  controller.log.2024-09-28-06  controller.log.2024-09-28-07  controller.log.2024-09-28-08  controller.log.2024-09-28-09  controller.log.2024-09-28-10  controller.log.2024-09-28-11  controller.log.2024-09-28-12  controller.log.2024-09-28-13  controller.log.2024-09-28-14  controller.log.2024-09-28-15  controller.log.2024-09-28-16  controller.log.2024-09-28-17  controller.log.2024-09-28-18  controller.log.2024-09-28-19  (+110 more)
real-time-data-lake/: .gitignore  Makefile  README.md  launch kafka  pyproject.toml
src/: __init__.py  exchange_rate_producer.py  order_book_producer.py  trades_producer.py
(+45 files in other folders)
