[tool.poetry]
name = "real-time-data-lake"
version = "0.1.0"
description = ""
authors = ["julianfransen <julian.fransen@hotmail.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
kafka-python = "^2.0.2"
pyspark = "^3.5.2"
great-expectations = "^1.0.5"
kafka = "^1.3.5"
confluent-kafka = "^2.5.3"
apache-airflow = "^2.10.2"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
